--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">OrderFoodAppKotlin</string>
+    <string name="your_name">Your Name</string>
+    <string name="your_address">Your Address</string>
 </resources>
