--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-
     <string name="popular_categories">Popular Categories</string>
     <string name="best_details">Best Details</string>
+    <string name="menu_category">Categories</string>
+
 </resources>
